--- a/styles/rodapé.css
+++ b/styles/rodapé.css
@@ -3,7 +3,7 @@ hr {
 }
 
 .rodapé {
-    background-color: var(--branco);
+    background-color: var(--laranja);
     padding: 1em;
 }
 
@@ -29,14 +29,14 @@ hr {
     }
 
     .lista-rodapé__link {
-        color: var(--cinza);
+        color: var(--laranja);
         text-decoration: none;
         margin-left: 0.6em;
     }
 
     .lista-rodapé__titulo {
         font-size: 14px;
-        color: var(--cinza-claro);
+        color: var(--laranja);
     }
 
     .rodapé__titulo {
